--- a/VPC/Jenkinsfile
+++ b/VPC/Jenkinsfile
@@ -28,12 +28,14 @@ pipeline {
         }
         
          stage('Provision infrastructure') {
-		 steps {            
+		 steps {   
+			  dir('VPC')
+			 { 
                 sh 'terraform init'
                 sh 'terraform plan'
                 sh 'terraform apply -auto-approve'
                              
-             
+			 }
             
         }
         }
