--- a/VPC/Jenkinsfile
+++ b/VPC/Jenkinsfile
@@ -27,20 +27,31 @@ pipeline {
             }
         }
         
-         stage('Provision infrastructure') {
+         stage('Initialize Terraform') {
 		 steps {  
 			  dir('VPC')
 			 {
                 sh 'terraform init'
-                sh 'terraform plan'
-                sh 'terraform apply -auto-approve'
-                             
-			 
 			 }
-        }
-        }
-        
-      
-      
-    }
+		 }
+	 }
+				 
+	stage('Terraform Plan') {
+		 steps {  
+			  dir('VPC')
+			 {
+                sh 'terraform plan'
+			 }
+		 }
+	}
+				 
+	stage('Terraform Apply') {
+		 steps {  
+			  dir('VPC')
+			 {
+                sh 'terraform apply -auto-approve'
+			 }
+		 }
+	}
+                             
 }
