--- a/VPC/Jenkinsfile
+++ b/VPC/Jenkinsfile
@@ -49,7 +49,7 @@ pipeline {
 		 steps {  
 			  dir('VPC')
 			 {
-                sh 'terraform destroy -auto-approve'
+                sh 'terraform apply -auto-approve'
 			 }
 		 }
 	}
