--- a/startup-script/Jenkinsfile
+++ b/startup-script/Jenkinsfile
@@ -49,7 +49,7 @@ pipeline {
 		 steps {  
 			  dir('startup-script')
 			 {
-                sh 'terraform destroy -auto-approve'
+                sh 'terraform apply-auto-approve'
 			 }
 		 }
 	}
