--- a/gke-node/Jenkinsfile
+++ b/gke-node/Jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
                     def tfHome = tool name: 'Terraform'
                     env.PATH = "${tfHome}:${env.PATH}"
                 }
-                sh 'echo $SVC_ACCOUNT_KEY | base64 -d > ./terraform.json'
+                sh 'echo $SVC_ACCOUNT_KEY | base64 -d > ./gke-node/terraform.json'
 		sh 'pwd'
                 sh 'terraform --version'               
                
@@ -29,12 +29,14 @@ pipeline {
         
          stage('Provision infrastructure') {
 		 steps {            
+			 dir ('gke-node')
+			 {
                 sh 'terraform init'
                 sh 'terraform plan'
                 sh 'terraform apply -auto-approve'
                              
              
-            
+			 } 
         }
         }
         
