--- a/Terraform-tfvars/Jenkinsfile
+++ b/Terraform-tfvars/Jenkinsfile
@@ -6,35 +6,53 @@ pipeline {
     SVC_ACCOUNT_KEY = credentials('terraform-auth')
   }
      
-    stages {      
+    stages {
+        stage ('checkout'){
+            steps {
+                git branch: 'main', url: 'https://github.com/ishaqmdgcp/gcp-devops.git'
+            }
+        }
+      
 
-	stage('Set Terraform path') {
+		stage('Set Terraform path') {
             steps {
                 script {
                     def tfHome = tool name: 'Terraform'
                     env.PATH = "${tfHome}:${env.PATH}"
                 }
-                sh 'echo $SVC_ACCOUNT_KEY | base64 -d > ./Terraform tfvars/terraform.json'
+                sh 'echo $SVC_ACCOUNT_KEY | base64 -d > ./Terraform-tfvars/terraform.json'
 		sh 'pwd'
                 sh 'terraform --version'               
                
             }
         }
         
-         stage('Provision infrastructure') {
-		 steps {   
-			 dir('Terraform tfvars')
+         stage('Initialize Terraform') {
+		 steps {  
+			  dir('Terraform-tfvars')
 			 {
                 sh 'terraform init'
-                sh 'terraform plan -var-file="instance.tfvars"'
-                sh 'terraform apply -var-file="instance.tfvars" -auto-approve'
-                             
-             
 			 }
-        }
-        }
-        
-      
-      
-    }
+		 }
+	 }
+				 
+	stage('Terraform Plan') {
+		 steps {  
+			  dir('Terraform-tfvars')
+			 {
+                sh 'terraform plan'
+			 }
+		 }
+	}
+				 
+	stage('Terraform Apply') {
+		 steps {  
+			  dir('Terraform-tfvars')
+			 {
+                sh 'terraform apply -auto-approve'
+			 }
+		 }
+	}
+                             
+}
 }
