--- a/Terraform-tfvars/Jenkinsfile
+++ b/Terraform-tfvars/Jenkinsfile
@@ -40,7 +40,7 @@ pipeline {
 		 steps {  
 			  dir('Terraform-tfvars')
 			 {
-                sh 'terraform plan'
+                sh 'terraform plan --var-file="instance.tfvars"'
 			 }
 		 }
 	}
@@ -49,7 +49,7 @@ pipeline {
 		 steps {  
 			  dir('Terraform-tfvars')
 			 {
-                sh 'terraform apply -auto-approve'
+                sh 'terraform apply --var-file="instance.tfvars" -auto-approve'
 			 }
 		 }
 	}
