--- a/Terraform-variables-outputs/Jenkinsfile
+++ b/Terraform-variables-outputs/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
     stages {
         stage ('checkout'){
             steps {
-                git branch: 'master', url: 'https://github.com/ishaqmdgcp/terraform.git'
+                git branch: 'main', url: 'https://github.com/ishaqmdgcp/gcp-devops.git'
             }
         }
       
@@ -20,25 +20,39 @@ pipeline {
                     def tfHome = tool name: 'Terraform'
                     env.PATH = "${tfHome}:${env.PATH}"
                 }
-                sh 'echo $SVC_ACCOUNT_KEY | base64 -d > ./terraform.json'
+                sh 'echo $SVC_ACCOUNT_KEY | base64 -d > ./Terraform-variables-outputs/terraform.json'
 		sh 'pwd'
                 sh 'terraform --version'               
                
             }
         }
         
-         stage('Provision infrastructure') {
-		 steps {            
+         stage('Initialize Terraform') {
+		 steps {  
+			  dir('Terraform-variables-outputs')
+			 {
                 sh 'terraform init'
+			 }
+		 }
+	 }
+				 
+	stage('Terraform Plan') {
+		 steps {  
+			  dir('Terraform-variables-outputs')
+			 {
                 sh 'terraform plan'
+			 }
+		 }
+	}
+				 
+	stage('Terraform Apply') {
+		 steps {  
+			  dir('Terraform-variables-outputs')
+			 {
                 sh 'terraform apply -auto-approve'
+			 }
+		 }
+	}
                              
-             
-            
-        }
-        }
-        
-      
-      
-    }
+}
 }
