--- a/gke-node/Jenkinsfile
+++ b/gke-node/Jenkinsfile
@@ -33,7 +33,7 @@ pipeline {
 			 {
                 sh 'terraform init'
                 sh 'terraform plan'
-                sh 'terraform destroy -auto-approve'
+                sh 'terraform apply -auto-approve'
                              
              
 			 } 
