--- a/VM-VPC/Jenkinsfile
+++ b/VM-VPC/Jenkinsfile
@@ -49,7 +49,7 @@ pipeline {
 		 steps {  
 			  dir('VM-VPC')
 			 {
-                sh 'terraform $TF_ACTION'
+                sh 'terraform $TF_ACTION $TF_APPROVE'
 			 }
 		 }
 	}
