--- a/VM-VPC/Jenkinsfile
+++ b/VM-VPC/Jenkinsfile
@@ -35,17 +35,8 @@ pipeline {
 			 }
 		 }
 	 }
-				 
-	stage('Terraform Plan') {
-		 steps {  
-			  dir('VM-VPC')
-			 {
-                sh 'terraform plan'
-			 }
-		 }
-	}
-				 
-	stage('Terraform Apply') {
+				  
+	stage('Terraform Action') {
 		 steps {  
 			  dir('VM-VPC')
 			 {
