--- a/VMInstance/Jenkinsfile
+++ b/VMInstance/Jenkinsfile
@@ -42,11 +42,19 @@ pipeline {
 			  dir('VMInstance')
 			 {
                 sh 'terraform $TF_ACTION $TF_APPROVE'
-				 sh 'sleep 120'
-				 sh 'terrform destroy -auto-approve'
+				
 			 }
 		 }
 	}
-                             
+      
+	     stage('Initialize Destroy') {
+		 steps {  
+			  dir('VMInstance')
+			 {
+                sh 'sleep 60'
+		sh 'terraform destroy -auto-approve'
+			 }
+		 }
+	 }
 }
 }
