--- a/Module/Jenkinsfile
+++ b/Module/Jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
                     def tfHome = tool name: 'Terraform'
                     env.PATH = "${tfHome}:${env.PATH}"
                 }
-                sh 'echo $SVC_ACCOUNT_KEY | base64 -d > ./VM-VPC/terraform.json'
+                sh 'echo $SVC_ACCOUNT_KEY | base64 -d > ./Module/terraform.json'
 		sh 'pwd'
                 sh 'terraform --version'               
                
@@ -29,7 +29,7 @@ pipeline {
         
          stage('Initialize Terraform') {
 		 steps {  
-			  dir('VM-VPC')
+			  dir('Module')
 			 {
                 sh 'terraform init'
 			 }
@@ -38,7 +38,7 @@ pipeline {
 				  
 	stage('Terraform Action') {
 		 steps {  
-			  dir('VM-VPC')
+			  dir('Module')
 			 {
                 sh 'terraform $TF_ACTIONS $TF_APPROVE'
 			 }
