--- a/Module/Jenkinsfile
+++ b/Module/Jenkinsfile
@@ -40,7 +40,7 @@ pipeline {
 		 steps {  
 			  dir('Module')
 			 {
-                sh 'terraform $TF_ACTIONS $TF_APPROVE'
+                sh 'terraform $TF_ACTIONS $TF_APPROVE --var-file=DEV.tfvar'
 			 }
 		 }
 	}
