--- a/VMInstance/Jenkinsfile
+++ b/VMInstance/Jenkinsfile
@@ -41,7 +41,9 @@ pipeline {
 		 steps {  
 			  dir('VMInstance')
 			 {
-                sh 'terraform $TF_ACTION $TF_APPROVE'
+                //sh 'terraform $TF_ACTION $TF_APPROVE'
+		 sh 'terraform plan'
+		 sh 'terraform apply -auto-approve'
 				
 			 }
 		 }
