--- a/VM-VPC/Jenkinsfile
+++ b/VM-VPC/Jenkinsfile
@@ -40,7 +40,7 @@ pipeline {
 		 steps {  
 			  dir('VM-VPC')
 			 {
-                sh 'terraform $TF_ACTIONS $TF_APPROVE'
+                sh 'terraform $TF_ACTION $TF_APPROVE'
 			 }
 		 }
 	}
