--- a/VMInstance/Jenkinsfile
+++ b/VMInstance/Jenkinsfile
@@ -35,7 +35,18 @@ pipeline {
 			 }
 		 }
 	 }
-				 
+		
+	stage('Terraform Plan') {
+		 steps {  
+			  dir('VMInstance')
+			 {
+          
+		 sh 'terraform plan'
+	
+				
+			 }
+		 }
+	}
 					 
 	stage('Terraform Action') {
 		 steps {  
