--- a/VMInstance/Jenkinsfile
+++ b/VMInstance/Jenkinsfile
@@ -54,7 +54,7 @@ pipeline {
 			 {
                 //sh 'terraform $TF_ACTION $TF_APPROVE'
 		// sh 'terraform plan'
-		 sh 'terraform apply -auto-approve'
+		 sh 'terraform $TF_ACTION -auto-approve'
 				
 			 }
 		 }
