Added build trigger

--- a/VMInstance/Jenkinsfile
+++ b/VMInstance/Jenkinsfile
@@ -1,5 +1,8 @@
 pipeline {
     agent any
+	parameters {
+		string(bane: 'TARGET_ENV', defaultValue: 'PROD', description: 'Environment')
+	}
 
 
     environment {
@@ -26,6 +29,17 @@ pipeline {
                
             }
         }
+	    
+	    Stage('PACKER'){
+		    steps{
+			    scripts{
+				    build jon: 'PACKER'
+				    parametes: [
+					    [$class: 'StringParameterValue', name 'FROM_BUILD', value: "${BUILD_NUMBER}" ]
+					    ]
+			    }
+		    }
+	    }
         
          stage('Initialize Terraform') {
 		 steps {  
