--- a/VMInstance/Jenkinsfile
+++ b/VMInstance/Jenkinsfile
@@ -1,8 +1,8 @@
 pipeline {
     agent any
-	parameters {
-		string(bane: 'TARGET_ENV', defaultValue: 'PROD', description: 'Environment')
-	}
+	//parameters {
+	//	string(bane: 'TARGET_ENV', defaultValue: 'PROD', description: 'Environment')
+	//}
 
 
     environment {
@@ -34,9 +34,9 @@ pipeline {
 		    steps{
 			    scripts{
 				    build jon: 'PACKER'
-				    parametes: [
-					    [$class: 'StringParameterValue', name 'FROM_BUILD', value: "${BUILD_NUMBER}" ]
-					    ]
+				    //parametes: [
+					//    [$class: 'StringParameterValue', name 'FROM_BUILD', value: "${BUILD_NUMBER}" ]
+					  //  ]
 			    }
 		    }
 	    }
