--- a/VM-VPC/Jenkinsfile
+++ b/VM-VPC/Jenkinsfile
@@ -40,9 +40,9 @@ pipeline {
 		 steps {  
 			  dir('VM-VPC')
 			 {
-                //sh 'terraform $TF_ACTION $TF_APPROVE'
-				 sh 'terraform plan'
-				 sh 'terraform apply'
+                sh 'terraform $TF_ACTION $TF_APPROVE'
+				
+		
 			 }
 		 }
 	}
