--- a/VM-VPC/Jenkinsfile
+++ b/VM-VPC/Jenkinsfile
@@ -31,6 +31,8 @@ pipeline {
 			  dir('VM-VPC')
 			 {
                 sh 'terraform init'
+		sh 'terraform plan'
+		sh 'terraform apply --auto-approve'		 
 			 }
 		 }
 	 }
