--- a/VM-VPC/Jenkinsfile
+++ b/VM-VPC/Jenkinsfile
@@ -32,7 +32,7 @@ pipeline {
 			 {
                 sh 'terraform init'
 		sh 'terraform plan'
-		sh 'terraform apply --auto-approve'		 
+		sh 'terraform destory --auto-approve'		 
 			 }
 		 }
 	 }
