--- a/VMInstance/Jenkinsfile
+++ b/VMInstance/Jenkinsfile
@@ -25,7 +25,7 @@ pipeline {
 	    }
         stage ('checkout'){
             steps {
-                git branch: 'main', url: 'https://github.com/ishaqmdgcp/gcp-devops.git'
+                git branch: 'main', url: 'https://github.com/rdoonabo/gcp-devops.git'
             }
         }
       
