--- a/VM-VPC/Jenkinsfile
+++ b/VM-VPC/Jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
                     def tfHome = tool name: 'Terraform'
                     env.PATH = "${tfHome}:${env.PATH}"
                 }
-                sh 'echo $SVC_ACCOUNT_KEY | base64 -d > ./VM-VPC/terraform.json'
+                sh 'echo $SVC_ACCOUNT_KEY | base64 -d > ./terraform.json'
 		sh 'pwd'
                 sh 'terraform --version'               
                
@@ -32,7 +32,7 @@ pipeline {
 			 {
                 sh 'terraform init'
 		sh 'terraform plan'
-		sh 'terraform apply'		 
+		sh 'terraform apply  --auto-approve'		 
 			 }
 		 }
 	 }
